- make sure text aligns vertically with copyright

--- a/client/templates/snaxterLayout/snaxterLayout.less
+++ b/client/templates/snaxterLayout/snaxterLayout.less
@@ -277,4 +277,5 @@ div.spinnerBox {
 
 .scydev-logo {
   padding-right: 10px;
+  vertical-align: top;
 }
